# routes/vhs.js
@@ -7,13 +7,9 @@ router.get('/', vhsController.getAll);
 
 router.get('/:id', vhsController.getSingle);
 
-router.get('/:id', vhsController.getSingleNAME);
-
 router.post('/', vhsController.createVHS);
 
 router.put('/:id', vhsController.updateVHS);
-
-router.delete('/:id', vhsController.deleteVHSNAME);
 
 router.delete('/:id', vhsController.deleteVHS);
 
